Fix gap between code and output

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     line-height: 1.1;
 }
 
-.reveal .cell .cell-output {
+.reveal .cell-output {
     margin-top: 0.5em;
     margin-bottom: 1.0em;
 }
